# tech-blog

./: .gitignore  README.md
backend/common_modules/: dynamodb_util.py  simple_api_util.py
backend/lambda/: config.json
backend/lambda/posts_delete/runtime/: posts_delete.py
backend/lambda/posts_get/runtime/: posts_get.py
backend/lambda/posts_list/runtime/: posts_list.py
backend/lambda/posts_post/runtime/: posts_post.py
backend/lambda/posts_put/runtime/: posts_put.py
backend/lambda/users/handlers/: get_users.py
backend/lambda/users_delete/runtime/: users_delete.py
backend/lambda/users_get/runtime/: users_get.py
backend/lambda/users_list/runtime/: users_list.py
backend/lambda/users_put/runtime/: users_put.py
infrastructure/: .gitignore  app.py  pyproject.toml  requirements.txt
infrastructure/backend/lambda/users/handlers/: get_users.py
infrastructure/config/: __init__.py  base.py  dev.py  prod.py
infrastructure/constructs/: dynamodb_table.py  lambda_function.py  rest_api_gateway.py
infrastructure/services/: dynamodb_table.py  lambda_function.py  rest_api_gateway.py
infrastructure/stacks/: api_gateway_stack.py  user_service_stack.py
